# avito-scraper

./: .gitignore  Dockerfile  README.md  compose.yaml  db.py  proxies.txt  pyproject.toml  scraper_data.md
avito_scraper/: avito.py  base.py  create_and_send_file.py  database.py  headers.py  just_in_case.py  main.py  proxy.py  settings.py
