[project]
name = "avito-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShkolaOlga", email = "shkola.olga@gmail.com" }
]
dependencies = [
    "psycopg[binary]>=3.2.3",
    "aiohttp[speedups]>=3.10.10",
    "xlsxwriter>=3.2.0",
    "aiohttp-socks>=0.9.0",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
scraper = { cmd = "python avito_scraper/main.py", env-file = ".env" }
